# gf3

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
pluginsrcs/: Makefile  Makefile.am  Makefile.in  plugin.h  plugin.h.~1.1.~  plugin.h.~2~  pluginif.h  pluginif.h.~1.1.~  pluginif.h.~1~
pluginsrcs/CVS/: Entries  Repository
pluginsrcs/circle/: Makefile  Makefile.am  Makefile.am-bu  Makefile.am.~2~  Makefile.in  Makefile.orig  circle.c  circle.c.~1.4.~  circle.c.~4~
pluginsrcs/circle/.deps/: circle_la-circle.Plo
pluginsrcs/circle/.libs/: circle.lai
pluginsrcs/circle/CVS/: Entries  Repository
pluginsrcs/circle/icons/: circle.xcf  circle.xpm
pluginsrcs/circle/icons/CVS/: Entries  Repository
pluginsrcs/lines/: Makefile  Makefile.am  Makefile.am.~1.1.~  Makefile.in  Makefile.~1~  lines.c  lines.c.~1.2.~  lines.c.~3~
pluginsrcs/lines/.deps/: lines_la-lines.Plo
pluginsrcs/lines/.libs/: lines.lai
pluginsrcs/lines/CVS/: Entries  Repository
pluginsrcs/pulley/: pulley.fig
src/: Makefile.am  Makefile.in  TODO  css_colour_table.c  css_colour_table.h  css_colours.c  css_colours.h  df_header.pl  df_struct.pl  drawing.h  ellipses.c  entities.c  entities.h  fallbacks.h  gf.c  gf.h  intersects.c  intersects.h  lines.c  persistents.c  persistents.h  preferences.c  preferences.h  python.c  python.h  quartic.c  quartic.h  rgbhsv.c  rgbhsv.h  select_paper.c  select_paper.h  select_pen.c  select_pen.h  select_scale.c  select_scale.h  utilities.c  utilities.h  view.c  view.h  xml-kwds.m4  (+2 more)
src/colours/: buildcolourtable  buildcolourtable.c  buildcolourtable.c.~1.3.~  css-colours.txt
src/colours/CVS/: Entries  Repository
src/images/: draw_ellipses.xcf  draw_lines.xcf  off.xcf
src/images/CVS/: Entries  Repository
src/tests/: catenate.py  catenate.py.~1~  draw.py  draw.py.~1~  inst.py  inst2.py  intersect.py  intersect.py.~3~  intersect2.py  intersect3.py  pts.py  sample.py  spline.py  spline.py.~1~  test1.py  test2.py  test3.py  test4.py  test5.py  test5.py.~1~  text.py  text.py.~2~  trans.py  trans.py.~1~
src/tests/CVS/: Entries  Repository
